<resources>
    <string name="app_name">DECOmap for Android</string>
    <string name="tablayout_tabname_mainactivty">Main</string>
    <string name="tablayout_tabname_setupactivity">Setup</string>
    <string name="tablayout_tabname_statusactivity">Status</string>
    <string name="tablayout_tabname_logactivity">Log</string>
    <string name="tablayout_tabname_aboutactivity">About</string>
    <string name="main_buttonlabel_connect">Start Session</string>
    <string name="main_buttonlabel_disconnect">End Session</string>
    <string name="main_buttonlabel_publishdevicecharacteristics">Publish device characteristics</string>
    <string name="main_default_wrongconfig_message">error while validating preferences…please check them</string>
    <string name="main_default_connectionerror_nsca">Connection Error - Check your connection preferences!</string>
    <string name="main_default_connectionerror_nsca_status">Connection Error</string>
    <string name="main_default_connection_closed">Connection Closed</string>
    <string name="main_default_publish_passiv_nsca_check">Published Passive NSCA Check</string>
    <string name="main_default_sending_monitorevent">Sending MonitorEvent</string>
    <string name="main_default_sending_appevent">Sending AppEvent</string>
    <string name="main_default_connection_established">Established Connection</string>
    <string name="main_progressbar_message_srcrequest_1">Please Wait…</string>
    <string name="main_progressbar_message_srcrequest_2">Executing Request</string>
    <string name="main_default_status_message">Waiting for User Input</string>
    <string name="main_status_message_prefix">[msg]</string>
    <string name="main_status_message_errorprefix">[error]</string>
    <string name="main_status_message_connection_established">Connection established</string>
    <string name="main_status_message_preparing_data">preparing data for request</string>
    <string name="main_status_message_monitoring_unknwon">" Monitoring-mode is unknown!"</string>
    <string name="main_status_message_ifmap_port_not_a_numer">" IF-MAP port is not a number!"</string>
    <string name="main_status_message_ifmap_port_null">" IF-MAP port is null or empty!"</string>
    <string name="main_status_message_ifmap_ip_not_valid">" IF-MAP ip is not valid!"</string>
    <string name="main_status_message_ifmap_ip_null">" IF-MAP ip is null or empty!"</string>
    <string name="main_status_message_basic_auth_password_null">" basic auth password is null or empty!"</string>
    <string name="main_status_message_basic_auth_username_null">" basic auth username is null or empty!"</string>
    <string name="main_status_message_imonitor_port_not_number">" iMonitor port is not a number!"</string>
    <string name="main_status_message_imonitor_port_null">" iMonitor port is null or empty!"</string>
    <string name="main_status_message_imonitor_ip_not_valid">" iMonitor ip is not valid!"</string>
    <string name="main_status_message_imonitor_ip_null">" iMonitor ip is null or empty!"</string>
    <string name="main_status_message_nsca_password_null">" NSCA Password is null or empty!"</string>
    <string name="main_status_message_addition_sending_request_to">"Sending Request to "</string>
    <string name="main_status_message_addition_disconnected">"disconnected."</string>
    <string name="main_status_message_addition_sending_Data">"Sending data to "</string>
    <string name="main_status_message_invalid_monitoring_mode">" monitoring mode is invalid!"</string>
    <string name="main_status_message_addition_sending_request">"Sending Request to "</string>
    <string name="main_status_message_esukom_metadata_not_supportet">"logging of esukom specific metadata is currently not supported!\n"</string>
    <string name="messagehandler_mainstatus_message_newsession">new session established</string>
    <string name="messagehandler_mainstatus_message_renewsession">session renewed</string>
    <string name="messagehandler_mainstatus_message_devicecharacteristics">device characteristics published</string>
    <string name="messagehandler_mainstatus_message_location">metadata-update published</string>
    <string name="messagehandler_mainstatus_message_endsession">session closed</string>
    <string name="messagehandler_mainstatus_message_invalidresponse">invalid response from server</string>
    <string name="preferences_kategoryheader_applicationSettings">Application Settings</string>
    <string name="preferences_kategoryheader_connectionSettings">Connection Settings</string>
    <string name="preferences_header_default_icon_text">icon</string>
    <string name="preferences_header_esukomMetadataSettings">ESUKOM-Metadata Settings</string>
    <string name="preferences_header_automationSettings">Automation Settings</string>
    <string name="preferences_summary_autostart">Application will be automatically started after device finished booting.</string>
    <string name="preferences_summary_autoconnect">Automatically connect to MAP-Server at startup</string>
    <string name="preferences_summary_imonitorpassword">Password for NSCA</string>
    <string name="preferences_summary_cryptPref">Encryption mode of NSCA communication</string>
    <string name="preferences_summary_allowunsafe">Allow "unsafe" SSL-Connection. When activated, the peer-certificate-check will be skipped. Recommended for testing and debugging.</string>
    <string name="preferences_summary_keystorepath">Path to keystore certificate for authentication </string>
    <string name="preferences_summary_keystorepw">Password of the selected Keystore</string>
    <string name="preferences_summary_logpublishcharacteristics">Enable logging of publish-characteristics messages</string>
    <string name="preferences_summary_updateinterval">Interval for sending updated metadata to Server. This includes publishing of Device-Characteristics and Location-Data. Minimum (and default) is 60000 ms (1 minute)</string>
    <string name="preferences_summary_logpath">Path to logging folder</string>
    <string name="preferences_summary_permanentlyConnection">Enables a permanent connection with the MAP-Server. If disabled, the client will periodically send "renew" requests to keep the session alive.</string>
    <string name="preferences_summary_logrenewrequest">Enable logging of renew-request messages</string>
    <string name="preferences_summary_lognewsessionrequest">Enable logging of new-session-/end-session messages</string>
    <string name="preferences_summary_logupdate">Enable logging of metadata-update messages</string>
    <string name="preferences_summary_logerrormessage">Enable logging of error-message messages</string>
    <string name="preferences_summary_loginvalidresponse">Enable logging of invalid-response messages</string>
    <string name="preferences_summary_applicationlogging">Write logging-messages to file</string>
    <string name="preferences_summary_autoupdate">Enable autmatic publish of updated metadata</string>
    <string name="preferences_title_autostart">Enable auto-start</string>
    <string name="preferences_title_autoconnect">Enable auto-connect</string>
    <string name="preferences_title_keystore_path">Keystore Path</string>
    <string name="preferences_title_keystore_password">Keystore Password</string>
    <string name="preferences_title_password">Password</string>
    <string name="preferences_title_allowunsafe">allow unsafe SSL</string>
    <string name="preferences_title_cryptPref">Encryption mode</string>
    <string name="preferences_title_renewinterval">Renew-Request Interval (in ms)</string>
    <string name="preferences_title_permanentlyConnection">Connection-Type</string>
    <string name="preferences_title_updateinterval">Auto-Update Interval (in ms)</string>
    <string name="preferences_title_applicationlogging">Log to file</string>
    <string name="preferences_title_logdirectory">Log Directory</string>
    <string name="preferences_title_logrenewrequest">Enable renew-session logging</string>
    <string name="preferences_title_lognewsessionrequest">Enable new/end-session logging</string>
    <string name="preferences_title_logautoupdate">Enable auto-update logging</string>
    <string name="preferences_title_logpublishcharacteristics">Enable publish-characteristics logging</string>
    <string name="preferences_title_logerrormessage">Enable error-message logging</string>
    <string name="preferences_title_loginvalidresponse">Enable invalid-response logging</string>
    <string name="preferences_title_autoupdate">Enable auto-update</string>
    <string name="preferences_keys_keystore_path">"keystorePath"</string>
    <string name="preferences_keys_keystore_password">"keystorePassword"</string>
    <string name="preferences_keys_updateinterval">"updateInterval"</string>
    <string name="preferences_keys_automatic_update">"autoUpdate"</string>
    <string name="preferences_keys_autostart">"autostartPreferences"</string>
    <string name="preferences_keys_autoconnect">"autoconnectPreferences"</string>
    <string name="preferences_keys_renew_intervall">"renewInterval"</string>
    <string name="preferences_keys_nsca_password">"nscaPassPreference"</string>
    <string name="preferences_keys_nsca_encryption">"nscaEncPref"</string>
    <string name="preferences_keys_logpath">"logPath"</string>
    <string name="preferences_keys_applicatiologging">"applicatiologging"</string>
    <string name="preferences_keys_logNewsessionRequest">"logNewsessionRequest"</string>
    <string name="preferences_keys_logRenewRequest">"logRenewRequest"</string>
    <string name="preferences_keys_log_update_connection">"logUpdateConnection"</string>
    <string name="preferences_keys_log_publish_characteristics">"logPublishCharacteristics"</string>
    <string name="preferences_keys_log_error_message">"logErrorMessage"</string>
    <string name="preferences_keys_log_invalide_response">"logInvalideResponse"</string>
    <string name="preferences_keys_allow_unsafe_ssl">"allowUnsafeSSLPreference"</string>
    <string name="preferences_keys_permanent_connection">"permanantlyConectionPreferences"</string>
    <string name="preferences_default_values_logpath">"/ifmap-client/logs/"</string>
    <string name="preferences_default_values_keystore_path">"/ifmap-client/keystore/keystore"</string>
    <string name="preferences_default_values_keystore_password">""</string>
    <string name="preferences_default_values_nsca_encription">1</string>
    <string name="preferences_default_values_nsca_password">""</string>
    <string name="preferences_default_values_update_interval">600000</string>
    <string name="preferences_default_values_renew_interval">10000</string>
    <string name="log_tab_label_details">DETAILS</string>
    <string name="log_tab_label_remove">REMOVE</string>
    <string name="log_tab_label_remove_type">REMOVE TYPE</string>
    <string name="log_tab_label_type">"Type: "</string>
    <string name="log_tab_label_target">"Target: "</string>
    <string name="log_tab_placeholder_timestemp">timestemp placeholder</string>
    <string name="log_tab_placeholder_type">type placeholder</string>
    <string name="log_tab_placeholder_target">target placeholder</string>
    <string name="log_tab_placeholder_status">status placeholder</string>
    <string name="info_name">DECOmap for Android</string>
    <string name="info_version">Version 0.2</string>
    <string name="info_copyright">© 2015 Decoit GmbH</string>
    <string name="info_license">Released under Apache License, Version 2.0</string>
    <string name="info_label_openwebsite">Visit SIMU-Project Website</string>
    <string name="info_label_simu_icon_text">SIMU Icon</string>
    <string name="info_label_decoit_icon_text">Decoit logo</string>
    <string name="file_chooser_lable_title">title</string>
    <string name="file_chooser_lable_choose_folder">Choose Folder</string>
    <string name="cancel">Cancel</string>
</resources>