<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:attr="http://schemas.android.com/apk/res-auto">
    <de.simu.decoit.android.decomap.activities.setupview.fragments.preferences.PreferenceFileChooserDialogPreference
        android:defaultValue="@string/preferences_default_values_keystore_path"
        android:key="@string/preferences_keys_keystore_path"
        android:summary="@string/preferences_summary_keystorepath"
        android:title="@string/preferences_title_keystore_path"
        attr:fileEnding=".txt" />
    <EditTextPreference
        android:defaultValue="@string/preferences_default_values_keystore_password"
        android:inputType="textPassword"
        android:key="@string/preferences_keys_keystore_password"
        android:summary="@string/preferences_summary_keystorepw"
        android:title="@string/preferences_title_keystore_password" />
</PreferenceScreen>