<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/log_tab"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/TextView01"
        style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/info_name"
        android:textAppearance="@color/bgrColor"
        android:textColor="@color/lblColor"
        android:textStyle="bold"
        android:typeface="normal" />


    <TextView
        android:id="@+id/TextView02"
        style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="5dp"
        android:text="@string/info_version"
        android:textAppearance="@color/bgrColor"
        android:textColor="@color/lblColor"
        android:textStyle="normal"
        android:typeface="normal" />

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/simu_logo_full"
        android:contentDescription="@string/info_label_simu_icon_text"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/TextView03"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/info_copyright"
        android:textAppearance="@color/bgrColor"
        android:textColor="@color/lblColor"
        android:textStyle="normal"
        android:typeface="normal" />


    <ImageView
        android:id="@+id/ImageView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/decoit_logo_full"
        android:contentDescription="@string/info_label_decoit_icon_text"
        android:paddingTop="5dp" />

    <TextView
        android:id="@id/TextView03"
        style="@android:style/TextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        android:text="@string/info_license"
        android:textAppearance="@color/bgrColor"
        android:textColor="@color/lblColor"
        android:textStyle="italic"
        android:typeface="normal" />

    <Button
        android:id="@+id/OpenProjectWebsite_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="infoTabButtonHandler"
        android:text="@string/info_label_openwebsite"
        android:textStyle="bold" />
</LinearLayout>
		
